--- a/app/src/main/res/layout/activity_expands_recycler_view.xml
+++ b/app/src/main/res/layout/activity_expands_recycler_view.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_FFFFFF">
 
-    <jsieun.com.androidwork.views.ParallaxHeaderView
+    <com.work.views.ParallaxHeaderView
         android:id="@+id/header_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:focusableInTouchMode="false"
                 android:focusable="false"
                 android:scrollbars="vertical" />
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    </jsieun.com.androidwork.views.ParallaxHeaderView>
-</android.support.constraint.ConstraintLayout>
+    </com.work.views.ParallaxHeaderView>
+</androidx.constraintlayout.ConstraintLayout>
