--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LicenseActivity">
 
-    <jsieun.com.androidwork.views.ParallaxHeaderView
+    <com.work.views.ParallaxHeaderView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:image_view_enable="false">
 
-        <android.support.v4.widget.NestedScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -20,6 +20,6 @@
                 android:id="@+id/license_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-        </android.support.v4.widget.NestedScrollView>
-    </jsieun.com.androidwork.views.ParallaxHeaderView>
-</android.support.constraint.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
+    </com.work.views.ParallaxHeaderView>
+</androidx.constraintlayout.widget.ConstraintLayout>
