--- a/app/src/main/res/layout/activity_progress_bar.xml
+++ b/app/src/main/res/layout/activity_progress_bar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.ProgressBarActivity">
 
-    <jsieun.com.androidwork.views.CustomProgressView
+    <com.work.views.CustomProgressView
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/size_30"
