--- a/app/src/main/res/layout/view_holder_expandable_text_only.xml
+++ b/app/src/main/res/layout/view_holder_expandable_text_only.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_000000"
@@ -23,4 +23,4 @@
         tools:text="안녕하세요~"
         />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
