--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,4 +39,5 @@
     <color name="color_D8D6D6">#D8D6D6</color>
     <color name="color_90E9C3">#90E9C3</color>
     <color name="color_2196F3">#2196F3</color>
+    <color name="color_eeeeee">#eeeeee</color>
 </resources>
